# cmake_example

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  geogram.patch  setup.py
.github/workflows/: wheels.yml
src/: main.cpp
